# Forecasting-demand

./: .gitignore  README.md  pyproject.toml  requirements.txt
demand_forecasting/: __init__.py  config.py  model.py
examples/: client_usage.py
src/: __init__.py  runtime.py
src/model/: __init__.py  config.py  forecast_model.py  preprocessing.py
src/pipeline/: __init__.py  evaluate.py  predict.py  train.py
tests/: test_demand_forecasting.py
