[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forecasting-demand"
version = "0.1.0"
description = "Reusable B2B demand forecasting wrapper for client-side training."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "scipy>=1.10",
]

[tool.setuptools.packages.find]
include = ["demand_forecasting*", "src*"]
